fix: User can now logout when using app on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,10 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .greeting {
+  text-align: center;
+}
+
+.greetingBreakline {
   display: none;
 }
 
@@ -384,6 +388,10 @@ table, th, td {
     left: 0;
     top: 0;
     z-index: 5;
+  }
+
+  .greetingBreakline {
+    display: inline;
   }
 
   #orderForm {
